[package]
name = "lifxcmd"
version = "0.3.2"
authors = ["Russell Mackenzie <russmackdev@gmail.com"]
description = "Command line program for controlling LIFX devices."

[dependencies]
rustylifx = { git = "https://github.com/russmack/rustylifx" }
#rustylifx = { path = "../rustylifx" }
clap = "2.23.1"
termcolor = "1.0.5"

